# KachaKache

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.cjs
.github/workflows/: build-macos.yml
scripts/: sync_whisper_runtime.sh
src/: About.tsx  App.tsx  Overlay.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs  types.rs
src-tauri/src/services/: audio.rs  dictation_controller.rs  history.rs  insertion.rs  mod.rs  models.rs  paths.rs  permissions.rs  settings.rs  text_rules.rs  transcription.rs
src/components/ui/: AmbientBackground.tsx  AppShell.tsx  BrandPill.tsx  DictationHero.tsx  MicOrb.tsx  ModeSwitch.tsx  ModelRow.tsx  PrivacyBanner.tsx  ProcessingPreview.tsx  SettingRow.tsx  SetupSplash.tsx  StatusChips.tsx  SuccessPreview.tsx  TranscriptCard.tsx  WaveformPreview.tsx
