[package]
name = "kachakache"
version = "0.1.0"
description = "KachaKache local dictation app"
authors = ["KachaKache"]
edition = "2021"

[lib]
name = "kachakache_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
cpal = "0.17"
futures-util = "0.3"
hound = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["sync", "fs", "io-util", "macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
macos-accessibility-client = "0.0.2"
objc2 = "0.6.1"
objc2-foundation = "0.3.1"
